--- a/webpersonal/core/templates/core/contact.html
+++ b/webpersonal/core/templates/core/contact.html
@@ -1,3 +1,6 @@
-
-<h2>Contactame</h2>
+{% extends 'core/base.html' %}
+{% block title %}Contacto{% endblock %}
+{% block content %}
+<h2>Contacto</h2>
 <p>Texto chingon</p>
+{% endblock %}
