--- a/webpersonal/core/templates/core/about.html
+++ b/webpersonal/core/templates/core/about.html
@@ -1,4 +1,6 @@
-
-
-<h2>Acerca de</h2>
+{% extends 'core/base.html' %}
+{% block title %}Acerca de Mi{% endblock %}
+{% block content %}
+<h2>Acerca</h2>
 <p>Texto chingon</p>
+{% endblock %}
