--- a/webpersonal/core/templates/core/base.html
+++ b/webpersonal/core/templates/core/base.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Mi Web Personal - By pauL</title>
+     <title>{% block content %}{% endblock %} | Mi Web Personal - By sr_vazkez</title>
 </head>
 <body>
      <h1>Mi web personal</h1>
