--- a/webpersonal/core/templates/core/home.html
+++ b/webpersonal/core/templates/core/home.html
@@ -1,4 +1,5 @@
 {% extends 'core/base.html' %}
+{% block title %} Portada {% endblock %}
 {% block content %}
 <h2>Inicio</h2>
 <p>Texto chingon</p>
