--- a/webpersonal/core/templates/core/portafolio.html
+++ b/webpersonal/core/templates/core/portafolio.html
@@ -1,4 +1,6 @@
-
-
+{% extends 'core/base.html' %}
+{% block title %}Portafolio{% endblock %}
+{% block content %}
 <h2>Portafolio</h2>
 <p>Texto chingon</p>
+{% endblock %}
