--- a/webpersonal/core/templates/core/base.html
+++ b/webpersonal/core/templates/core/base.html
@@ -9,10 +9,10 @@
 <body>
      <h1>Mi web personal</h1>
 <ul>
-     <li><a href="/">Portada</a></li>
-     <li><a href="/about/">Acerca de</a></li>
-     <li><a href="/portafolio/">portafolio</a></li>
-     <li><a href="/contact/">Contacto</a></li>
+     <li><a href="{% url 'home' %}">Portada</a></li>
+     <li><a href="{% url 'about' %}">Acerca de</a></li>
+     <li><a href="{% url 'portafolio' %}">portafolio</a></li>
+     <li><a href="{% url 'contact' %}">Contacto</a></li>
 </ul>
 
 {% block content %}{% endblock %}
