agregando imagen dinamica

--- a/webpersonal/core/templates/core/base.html
+++ b/webpersonal/core/templates/core/base.html
@@ -47,15 +47,18 @@
       </div>
     </nav>
 
-    <!-- Cabecera -->
-    <header class="masthead" style="background-image: url('{% static 'core/img/home-bg.jpg' %}')">
+    <!-- Cabecera  -->
+    <header class="masthead" style="background-image: url('{% block background %} {%endblock%}')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Juan Pérez</h1>
-              <span class="subheading">Ingeniero Industrial</span>
+                 
+                 {% block headers %}
+                      
+                 {% endblock %}
+                      
             </div>
           </div>
         </div>
