--- a/webpersonal/core/templates/core/home.html
+++ b/webpersonal/core/templates/core/home.html
@@ -1,5 +1,18 @@
 {% extends 'core/base.html' %}
 {% block title %} Portada {% endblock %}
+
+
+{% block background %}
+     {% load static %}
+     {% static 'core/img/home-bg.jpg' %}
+{% endblock%}
+     
+
+{% block headers %}
+<h1>Juan Pérez</h1>
+<span class="subheading">Ingeniero Industrial</span>
+{% endblock%}
+     
 {% block content %}
 <h2>Inicio</h2>
 <p>Texto chingon</p>
