adecuando para about

--- a/webpersonal/core/templates/core/base.html
+++ b/webpersonal/core/templates/core/base.html
@@ -66,9 +66,15 @@
     </header>
 
     <!--Contenido-->
-    {% block content %}
-      
-    {% endblock %}
+    <div class="container">
+     <div class="row">   
+          
+          {% block content %}
+               
+          {% endblock %}
+
+     </div>  
+   </div>
       
 
 
