mostrando la lista de lo guardado

--- a/webpersonal/portafolio/templates/portafolio/portafolio.html
+++ b/webpersonal/portafolio/templates/portafolio/portafolio.html
@@ -9,6 +9,7 @@
 {% endblock%}
 
 {% block content %}
+{{projects}}
 <!-- Proyecto -->
 <div class="row project">
      <div class="col-lg-3 col-md-4 offset-lg-1">
