mostrando la imagen de la lista

--- a/webpersonal/portafolio/templates/portafolio/portafolio.html
+++ b/webpersonal/portafolio/templates/portafolio/portafolio.html
@@ -13,7 +13,7 @@
 <!-- Proyecto -->
 <div class="row project">
      <div class="col-lg-3 col-md-4 offset-lg-1">
-          <img class="img-fluid" src="{{project.image}}" alt="">
+          <img class="img-fluid" src="{{project.image.url}}" alt="">
      </div>
      <div class="col-lg-7 col-md-8">
           <h2 class="section-heading title">{{project.title}}</h2>
